--- a/kaitou-ch/package.json
+++ b/kaitou-ch/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.0",
+    "p5-ui": "^0.1.10",
     "vue": "^3.3.4"
   },
   "devDependencies": {
