--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "axios": "^1.6.0",
     "p5-ui": "^0.1.10",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-i18n": "^9.4.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
